<resources>
    <string name="app_name">SGI Butsudan APP</string>

    <string name="prompt_pass">PASS</string>
    <string name="prompt_id">ID</string>
    <string name="title_login">Login</string>
    <string name="first_person_from_here">The first person from here</string>
    <string name="title_user_info_registration">User Information Registration</string>
    <string name="prompt_mail_address">E-mail Address</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_language">Language(English or Japanese)</string>
    <string name="prompt_prefectures">Prefectures (or Overseas)</string>
    <string name="prompt_age">Age</string>
    <string name="prompt_gender">Gender</string>
    <string name="receive_notification_via_mail">Receive notifications via E-Mail</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="annual_amount">¥ 1,200 / year</string>
    <string name="monthly_amount">¥ 120 / month</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="title_select_altar">Select Altar</string>
    <string name="choose_altar">Please choose the type of altar from the following.</string>
    <string name="btn_back">Back</string>
    <string name="title_select_buddhist">Select Buddhist Tool</string>
    <string name="choose_buddhist_tool">Please choose the type of Buddhist tool from the following.</string>
    <string name="btn_goto_confirm_screen">Confirm</string>
    <string name="btn_choose_photo">Choose a photo</string>
    <string name="btn_take_photo">Take a photo</string>
    <string name="title_image_correction">Information on screen correction (charged)</string>
    <string name="btn_apply">Apply</string>
    <string name="btn_no_need">No Need</string>
    <string name="btn_history">History</string>
    <string name="btn_speed_adjustment">Speed</string>
    <string name="btn_menu">Menu</string>
    <string name="btn_start">Start</string>
    <string name="btn_stop">Stop</string>
    <string name="title_count_last_ten_days">Counts in last 10 days</string>
    <string name="title_speed_adjustment">Speed Adjustment</string>
    <string name="btn_slow">Slow</string>
    <string name="btn_fast">Fast</string>
    <string name="title_terms_of_service">Terms of Service</string>
    <string name="title_contact_us">Contact Us</string>
    <string name="title_about_payment">About Payment Method</string>
    <string name="title_notation">Commercial</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_reenter_mail_address">E-Mail Address Re-Enter</string>
    <string name="prompt_inquiry_content">Content of Inquiry</string>
    <string name="btn_send">Send</string>
    <string name="str_processing">Processing...</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="btn_register">Sign Up</string>
    <string name="title_theme_change_later">Buddhist altars and Buddhist objects can be changed later.</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_save">Save</string>
    <string name="btn_yes">YES</string>
    <string name="btn_no">NO</string>
    <string name="btn_forgot_password">Forgot Password</string>
    <string name="btn_upload_own">Upload by yourself</string>
    <string name="btn_upload_admin">Request a Image correction</string>
    <string name="menu_edit_profile">Edit Profile</string>
    <string name="menu_edit_image">Image Correction</string>
    <string name="menu_edit_theme">Theme Correction</string>
    <string name="menu_about_app">About app</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_cancel_membership">Cancel the Membership</string>
    <string name="sent_content_successfully">Sent Successfully</string>
    <string name="save_profile_successfully">Save Successfully</string>
    <string name="input_mail_address">Please input Email Address.</string>
    <string name="input_password">Please input Password.</string>
    <string name="input_mail_password">Please input email address and password.</string>
    <string name="msg_cancel_membership">Cancel the Membership ? </string>
    <string name="msg_adjust_honzon">Please adjust the position of your Gohonzon.</string>
    <string name="msg_notification_comment">Keep the notification configuration of the application “ON” as a notice will be sent to you after the completion of re-correction.</string>
    <string name="msg_save_history">If you want to inherit the count number by model change etc, you can take over by logging in from another model after pressing the registration button below.</string>
    <string name="btn_back_main">Main Page</string>
    <string name="count_format">%07ds</string>
    <string name="correction_info">We provide the correction for your picture we have received with \120. Trimming (cutting off) and adjustment for light level will be provided. By the next business day, we will send the corrected one to you.\n*The re-correction will be possible just for once.\n*Make the request for re-correction through the inquiry form.</string>
    <string name="take_photo_comment">Take the picture of Gohonzon with the camera of your smartphone, adjust it with automatic trimming function and then press cut-off button.</string>
    <string name="send_contact_succeess">Thank you for your inquiry.</string>
    <string name="msg_login_expire">Your login has expired. Please log in again.</string>
    <string name="msg_recharge">To continue to use this, please subscribe.</string>
    <string name="msg_overwrite">Overwrite?</string>
    <string name="content_about_payment">お使いの端末により変更・解約方法が異な
ります。解約後も残りの期間は引き続きご
利用いただけます。\n\n\n
<b><i>・iPhone、iPad、iPod touch の場合</i></b>
定期購読内容を確認するには、こちらのリ
ンクをタップします。または、下記の
URL をご参照ください。\n\n
≫ 変更・解約手順\n\n\n
        <b><i>・Android の場合</i></b>
GooglePlay ストアから定期購読を解約し
ます。詳しくは下記の URL をご参照くだ
さい。\n\n
≫ 変更・解約手順</string>
    <string name="btn_ring">Ring</string>
    <string name="advance_counter">Advance counters</string>
    <string name="return_counter">Return counter</string>

    <array name="arr_language">
        <item>Japanese</item>
        <item>English</item>
    </array>

    <array name="arr_gender">
        <item>- Select -</item>
        <item>Male</item>
        <item>Female</item>
    </array>

    <array name="arr_prefecture">
        <item>- Select -</item>
        <item>Hokkaido</item>
        <item>Aomori</item>
        <item>Iwate</item>
        <item>Miyagi</item>
        <item>Akita</item>
        <item>Yamagata</item>
        <item>Fukushima</item>
        <item>Ibaraki</item>
        <item>Tochigi</item>
        <item>Gumma</item>
        <item>Saitama</item>
        <item>Chiba</item>
        <item>Tokyo</item>
        <item>Kanagawa</item>
        <item>Niigata</item>
        <item>Toyama</item>
        <item>Ishikawa</item>
        <item>Fukui</item>
        <item>Yamanashi</item>
        <item>Nagano</item>
        <item>Gifu</item>
        <item>Shizuoka</item>
        <item>Aichi</item>
        <item>Mie</item>
        <item>Shiga</item>
        <item>Kyoto</item>
        <item>Osaka</item>
        <item>Hyogo</item>
        <item>Nara</item>
        <item>Wakayama</item>
        <item>Tottori</item>
        <item>Shimane</item>
        <item>Okayama</item>
        <item>Hiroshima</item>
        <item>Yamaguchi</item>
        <item>Tokushima</item>
        <item>Kagawa</item>
        <item>Ehime</item>
        <item>Kochi</item>
        <item>Fukuoka</item>
        <item>Saga</item>
        <item>Nagasaki</item>
        <item>Kumamoto</item>
        <item>Oita</item>
        <item>Miyazaki</item>
        <item>Kagoshima</item>
        <item>Okinawa</item>
        <item>Overseas</item>
    </array>

    <array name="arr_age">
        <item>- Select -</item>
        <item>Below 19</item>
        <item>20\'s</item>
        <item>30\'s</item>
        <item>40\'s</item>
        <item>50\'s</item>
        <item>60\'s</item>
        <item>70\'s</item>
        <item>80\'s</item>
        <item>Above 90</item>
    </array>
</resources>
