<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="leif.statue.com.ui.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorDarkBlue"
                android:textStyle="bold"
                android:textSize="22sp"
                android:text="@string/menu_edit_profile"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edt_mail_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_mail_address"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:text="zkilsr"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textSize="18sp"
                android:text="@string/prompt_language"/>
            <Spinner
                android:id="@+id/language_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/arr_language"></Spinner>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textSize="18sp"
                android:text="@string/prompt_prefectures"/>
            <Spinner
                android:id="@+id/prefecture_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/arr_prefecture"></Spinner>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/prompt_age"/>
            <Spinner
                android:id="@+id/age_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/arr_age"></Spinner>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_gender"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textSize="18sp"
                android:paddingLeft="4dp"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/radio_gender_male"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gender_male"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/radio_gender_female"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gender_female"/>
            </RadioGroup>

            <CheckBox
                android:id="@+id/chk_receive_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/receive_notification_via_mail"/>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_save"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                style="@style/ButtonAzure"
                android:textColor="@color/colorDarkBlue"/>

            <Button
                android:id="@+id/btn_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ButtonAzure"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textColor="@color/colorDarkBlue"
                android:text="@string/btn_back"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
