<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="leif.statue.com.ui.UploadHonjouActivity">

    <Button
        android:id="@+id/btn_choose_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ButtonAzure"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:visibility="gone"
        android:text="@string/btn_choose_photo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorDarkBlue"
        android:text="@string/take_photo_comment"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btn_take_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ButtonAzure"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/btn_take_photo"/>

    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ButtonAzure"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/btn_back"/>
</LinearLayout>
